<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">crowdSOS</string>
    <string name="action_report">Report</string>
    <string name="action_list">List</string>
    <string name="client_key">7c6416bca914b7d5158d178a4367de</string>
    <string name="client_secret">d9057093704be1f564508580831ca4</string>
    <string name="client_basic_auth">Basic N2M2NDE2YmNhOTE0YjdkNTE1OGQxNzhhNDM2N2RlOmQ5MDU3MDkzNzA0YmUxZjU2NDUwODU4MDgzMWNhNA==</string>
    <string name="title_activity_report">Report</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_report_incident">ReportIncidentActivity</string>
    <string name="theft">Theft</string>
    <string name="other">Other</string>
    <string name="assault">Assault</string>
    <string name="sexual_assault">Sexual Assault</string>
    <string name="medical">Medical</string>
    <string name="overdose">Overdose</string>
    <string name="report_incident">Report Incident</string>
    <string name="incident_details">Incident details</string>
    <string name="buy_sell">Buy &amp; Sell</string>
    <string name="lost_found">Lost &amp; Found</string>
    <string name="find_me">Find Me</string>
    <string name="title_incident_list">Incidents</string>
    <string name="title_incident_detail">Incident Details</string>
    <string name="title_activity_incident_list">Incidents</string>
    <string name="all_incidents">All Incidents</string>
    <string name="loading">Loading...</string>

    <string-array name="incident_types">
        <item>@string/all_incidents</item>
        <item>@string/assault</item>
        <item>@string/buy_sell</item>
        <item>@string/lost_found</item>
        <item>@string/medical</item>
        <item>@string/other</item>
        <item>@string/overdose</item>
        <item>@string/sexual_assault</item>
        <item>@string/theft</item>
    </string-array>

    <string name="title_activity_terms_and_conditions">Terms and Conditions</string>
    <string name="agree">Agree</string>
    <string name="share_referral">Tell\nFriends</string>
    <string name="referral_subject">Check out crowdSOS</string>
    <string name="referral_body">Check out crowdSOS:</string>
    <string name="gcm_sender_id">525784215108</string>
    <string name="main_pipeline_config">        {
			"@type": "edu.mit.media.openpds.client.funf.OpenPDSPipeline",
			"GCMSenderId": "525784215108",
			"schedules": {
				"archive": {
					"strict": false,
					"interval": 86405
				},
				"upload": {
					"strict": true,
					"interval": 900
				}
			},
			"data": [			
				{
					"@type": "edu.mit.media.funf.probe.builtin.SimpleLocationProbe",
				    "maxWaitTime": 30,
				    "goodEnoughAccuracy": 30,
				    "useCache": false,
				    "@schedule": {
					    "strict": true,
					    "interval": 900,
					    "opportunistic": true
					}
				},
				{
					"@type": "edu.mit.media.funf.probe.builtin.BluetoothProbe",
					"maxScanTime": 30, 
					"@schedule": {
						"strict": true,
						"interval": 900, 
						"opportunistic": true
					}
				}
			]
		}</string>
    <string name="title_activity_update_play_services">Update Google Play Services</string>
    <string name="update_play_services_text">An update to Google Play Services is required for this app to run.\nPlease click the following button to update Google Play Services in the Play store.</string>
    <string name="title_activity_social_account_login">SocialAccountLoginActivity</string>

</resources>